# postgresql-labs-haskell

./: .gitignore  Dockerfile  LICENSE  README.md  db-setter.sh  db-setup-commands.sql  db-setup.sh  postgresql-labs-haskell.cabal  stack.yaml  task1
src/: Common.hs  Main.hs  Timer.hs
src/cmd/: Main.hs
src/gui/: Main.hs
tasks-queries/: task1-lined.sql  task1.sql  task1.txt
