name:                postgresql-labs-haskell
version:             0.0.0.2
-- synopsis:
-- description:
homepage:            https://github.com/Russoul/postgresql-labs-haskell/#README
license:             MIT
license-file:        LICENSE
author:              Russoul & Bychin
maintainer:          russoulmc@gmail.com
copyright:           2017 Russoul & Bychin
category:            Database
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10


executable exe
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , array
                     , hashable
                     , time
                     , postgresql-libpq
                     , bytestring
  other-modules:       Timer, Common
  default-language:    Haskell2010


source-repository head
  type:     git
  location: https://github.com/Russoul/postgresql-labs-haskell
